--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "npm run build_webpack && npm run validate && rm -rf stats.json",
+    "build": "npm run build_webpack && npm run validate",
     "build_webpack": "rm -rf ./dist && webpack --mode=production --node-env=production",
-    "validate": "npx statoscope validate -i stats.json --config=./statoscope.config.js"
+    "validate": "node_modules/.bin/statoscope validate -i stats.json --config=./statoscope.config.js"
   },
   "author": "",
   "license": "ISC",
