--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@statoscope/cli": "^5.14.1",
     "@statoscope/stats-validator-plugin-webpack": "^5.14.1",
     "@statoscope/webpack-plugin": "^5.14.1",
+    "@types/async": "^3.2.15",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.30",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^3.11.4",
+    "@types/webpack-node-externals": "^2.5.3",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.3.1",
     "ts-loader": "^9.2.6",
@@ -26,7 +28,8 @@
     "typescript": "^4.3.4",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "buffer": "^6.0.3",
