--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
     "target": "ES5",
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "jsx": "react"
+    "jsx": "react",
+    "allowJs": true,
+    "lib": [
+      "es2019"
+    ]
   },
   "include": [
     "src",
